# yolo_model

./: .gitignore  CMakeLists.txt  README.md  identifierCleanup.py  requirements.txt  segedlet.txt  setup.py
config/: yolov11.yaml  zenoh_config.json  zenoh_config.json5  zenoh_trainconfig.json  zenoh_trainconfig.json5
data/: data.yaml  hyp.yaml
models/train1/: args.yaml  results.csv
models/train2/: args.yaml  results.csv
models/train3/train/: args.yaml  results.csv
models/train3/train/weights/: best.pt  last.pt
models/train4/results/: args.yaml  results.csv
models/train4/results/weights/: best.pt  last.pt
models/train5/results/: args.yaml  results.csv
models/train5/results/weights/: best.pt  last.pt
models/train6/results/: args.yaml  results.csv
models/train6/results/weights/: best.pt  last.pt
src/: camera_pub.py  card_augmenter.cpp  card_augmenter_node.cpp  card_augmenter_node.hpp  card_gen.cpp  detect.py  get_package_path.cpp  http_to_zenoh.py  train.py  train_subscriber.py  video_publisher.py  zenoh_pubsub.py  zenoh_sub.py
